--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,8 @@ p, button{
 }
 
 .copy{
-    font-size: 11.2rem;
+    display: flex;
+    font-size: 13rem;
     position: absolute;
     writing-mode: vertical-rl;
     white-space: nowrap;
@@ -37,7 +38,7 @@ p, button{
     top: 0;
     left: 0;
     overflow: hidden;
-
+    text-orientation: sideways;
     z-index: 1;
 }
 
@@ -76,7 +77,7 @@ p, button{
     display: flex;
     gap: 1rem;
     position: absolute;
-    bottom: 1rem;
+    bottom: 3rem;
     left: 50%;
     transform: translate(-50%, 0);
 }
@@ -87,8 +88,8 @@ p, button{
     left: 50%;
     transform: translate(-50%, -50%);
 
-    width: 80%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
     
     z-index: 0;
 
