--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,13 @@
 :root{
-/* カラー指定 */
---color-Main: ;
---color-Sub01: ;
---color-Sub02: ;
---color-Black: #222;
---color-White: #f7f7f7;
---color-Gray: #f0f0f0;
+    /* カラー指定 */
+    --color-Main: ;
+    --color-Sub01: ;
+    --color-Sub02: ;
+    --color-Black: #222;
+    --color-White: #f7f7f7;
+    --color-Gray: #f0f0f0;
+
+    --gradient-Black: linear-gradient(90deg, rgba(85, 85, 85, 1), rgba(0, 0, 0, 1));
 }
 
 p, button{
@@ -15,70 +17,71 @@ p, button{
 }
 
 .wrapper {
-    height: 100vh;
+    position: relative;
+    z-index: 0;
     width: 100vw;
+    height: 100vh;
     overflow: hidden;
     background: url(../img/bg.png) center center/cover no-repeat;
-    z-index: 0;
 }
 
 .container {
-    height: 100%;
     width: 100%;
+    height: 100%;
     overflow: hidden;
 }
 
-.copy{
-    display: flex;
-    font-size: 13rem;
+.copy__box{
     position: absolute;
-    writing-mode: vertical-rl;
-    white-space: nowrap;
-    height: 100%;
     top: 0;
     left: 0;
-    overflow: hidden;
-    text-orientation: sideways;
     z-index: 1;
+    display: flex;
+    width: auto;
+    height: 100%;
+    overflow: hidden;
+    font-size: 13rem;
+    writing-mode: vertical-rl;
+    white-space: nowrap;
+    text-orientation: sideways;
 }
 
 .text {
     position: absolute;
     top: 1rem;
     left: 50%;
-    transform: translate(-50%, 0);
     z-index: 2;
+    transform: translate(-50%, 0);
 }
 
 .text h1 {
+    display: inline-block;
     font-family: "modak", sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: clamp(14rem, 5vw, 14rem);
-    letter-spacing: -0.01em;
-    color:var(--color-Black);
-    text-align: center;
     line-height: 1;
-    display: inline-block;
+    color: var(--color-Black);
+    text-align: center;
+    letter-spacing: -0.01em;
 }
 
 .text p {
-    font-size: 2rem;
-    display: inline-block;
-    color: var(--color-White);
     position: absolute;
-    bottom: 10%;
     right: -30%;
-    rotate: -5deg;
+    bottom: 10%;
     display: inline-block;
+    font-size: 2rem;
+    color: var(--color-White);
+    rotate: -5deg;
 }
 
 .buttons {
-    display: flex;
-    gap: 1rem;
     position: absolute;
     bottom: 3rem;
     left: 50%;
+    display: flex;
+    gap: 1rem;
     transform: translate(-50%, 0);
 }
 
@@ -86,45 +89,146 @@ p, button{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-
+    z-index: 0;
     width: 100%;
     height: 100%;
-    
-    z-index: 0;
-
     overflow: hidden;
+    transform: translate(-50%, -50%);
 }
-
-button {
-    font-size: 1rem;
+.play, .shuffle {
+    display: flex;
     padding: 1rem 2rem;
+    font-size: 1rem;
+    color: var(--color-Black);
+    background: var(--color-White);
     border: none;
     border-radius: 10rem;
-    background: var(--color-White);
-    color: var(--color-Black);
     cursor: pointer;
     transition: all 0.5s;
-    display: flex;
 }
 
 .play::before{
     content: "";
+    width: 1rem;
     margin-right: 0.5rem;
     background: url(../img/play.svg) no-repeat;
     background-size: 100% 100%;
-    width: 1rem;
 }
 
 .shuffle::before{
     content: "";
+    width: 1rem;
     margin-right: 0.5rem;
     background: url(../img/shuffle.svg) no-repeat;
     background-size: 100% 100%;
-    width: 1rem;
 }
 
-button:hover {
-    background: var(--color-Black);
+.play:hover, .shuffle:hover {
     color: var(--color-White);
+    background: var(--color-Black);
+}
+
+/* モーダルウィンドウの装飾
+=============================== */
+.modal__wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 99;
+    width: 100%;
+    height: 100%;
+    background: rgb(from var(--color-Black) r g b / 0.5);
+
+    display: none;
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 100;
+    width: 70%;
+    aspect-ratio: 16/9;
+    background: rgb(from var(--color-White) r g b / 0.5);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(8.5px);
+    -webkit-backdrop-filter: blur(8.5px);
+    transform: translate(-50%, -50%);
+    display: flex;
+}
+
+.modal__modelViewer {
+    width: 60%;
+    height: 100%;
+}
+
+.modal__contents {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 1rem;
+    padding: 2rem;
+
+}
+
+.modal__textContents {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.modal__title {
+    font-size: 2rem;
+}
+
+.modal__closeButton {
+    position: absolute;
+    top: -0.5rem;
+    right: -0.5rem;
+    z-index: 101;
+    width: 4rem;
+    height: 4rem;
+    padding: 0.5rem;
+    background: var(--color-White);
+    border-radius: 50%;
+    cursor: pointer;
+    transition: all 0.4s ease;
+}
+
+.modal__closeButton svg {
+    width: 100%;
+    height: 100%;
+    fill: var(--color-Black);
+    transition: all 0.4s ease;
+}
+
+/* ホバー時のエフェクト */
+.modal__closeButton:hover {
+    background: var(--color-Black);
+}
+
+.modal__closeButton:hover svg{
+    transform: rotate(90deg);
+    fill: var(--color-White);
+}
+
+.modal__buttons {
+    display: flex;
+    justify-content: space-around;
+}
+
+.modal__buttons button {
+    padding: 1rem 2rem;
+    font-size: 2rem;
+    color: var(--color-White);
+    background: var(--color-Black);
+    border-radius: 9999px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.modal__buttons button:hover {
+    background-color: var(--color-White);
+    color: var(--color-Black);
 }
